# rhozheim_bot

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
src/: config.py  dependencies.py  rhozheim_bot.py
src/downloading/: downloader_controller.py  downloader_interface.py  downloading_exeptions.py  track_model.py  ytdpl_downloader.py
src/quotes/: quote_model.py  quotes_controller.py
src/voice_recognizing/: local_recognizer.py  multivosk.py  voice_recognizer_controller.py  voice_recognzer_interface.py
src/weather/: geonames_openmeteo_fetcher.py  weather_controller.py  wheather_fetcher_interface.py  wheather_report_model.py
